# Vacancies

./: .flake8  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_interaction_py.html  z_145eef247bfb46b6_file__interaction_py.html  z_145eef247bfb46b6_file_interaction_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancies_py.html
src/: api_interaction.py  file_interaction.py  utils.py  vacancies.py
tests/: conftest.py  test_api_interaction.py  test_file_interaction.py  test_utils.py  test_vacancies.py
