[project]
name = "vacancies"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgenia Komendant",email = "eekomendant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ['.venv', 'tests']


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
        \.git
      | \.venv
      | data
      | logs
  )/
)
'''


[tool.isort]
# Максимальная длина строки
line_length = 119
